Test Category and Tags

--- a/_posts/2023-02-10-TestPost.md
+++ b/_posts/2023-02-10-TestPost.md
@@ -2,8 +2,8 @@
 title: "Test Post"
 excerpt: "테스트 글입니다."
 
-categories:
-  - Blog
+permalink: /categories/Blog
+layout: category
 tags:
   - [content, Github]
 
