--- a/_posts/2023-02-10-TestPost.md
+++ b/_posts/2023-02-10-TestPost.md
@@ -2,8 +2,8 @@
 title: "Test Post"
 excerpt: "테스트 글입니다."
 
-permalink: /categories/Blog
-layout: category
+categories:
+  - Blog
 tags:
   - [content, Github]
 
