--- a/_posts/2023-02-25-BlogURL.md
+++ b/_posts/2023-02-25-BlogURL.md
@@ -14,7 +14,8 @@ date: 2023-02-25
 
 ### 참고한 블로그 링크
 
-깃헙 블로그 만들때 정말 도움이 많이 됐던 블로그들입니다.
-[https://ansohxxn.github.io/](https://ansohxxn.github.io/)
-[https://devinlife.com/](https://devinlife.com/)
-[https://eona1301.github.io/](https://eona1301.github.io/)
+깃헙 블로그 만들때 정말 도움이 많이 됐던 블로그들 입니다.<br/>
+
+[https://ansohxxn.github.io/](https://ansohxxn.github.io/)<br/>
+[https://devinlife.com/](https://devinlife.com/)<br/>
+[https://eona1301.github.io/](https://eona1301.github.io/)<br/>
