Edit Circuits-0 Post

--- a/_posts/Circuits/2023-03-01-Circuits-0.md
+++ b/_posts/Circuits/2023-03-01-Circuits-0.md
@@ -180,8 +180,8 @@ date: 2023-03-01
 
   4. 잡음여유
   <br>
-
-  <br>
+  회로의 기능을 정상적으로 수행할 수 있는 잡음전압의 최대값입니다.
+  <br><br>
 
 * 양논리와 음논리
 <br>
@@ -197,7 +197,7 @@ date: 2023-03-01
   <br>
 
 
-![양논리와 음논리](./assets/images/logicSystem.png)
+![양논리와 음논리](/assets/images/logicSystem.png)
 <br>
 출처: [https://www.electroniclinic.com/logic-gates-in-digital-electronics-complete-guide/](https://www.electroniclinic.com/logic-gates-in-digital-electronics-complete-guide/)
 <br>
