--- a/_posts/C/2023-03-07-C-2.md
+++ b/_posts/C/2023-03-07-C-2.md
@@ -16,6 +16,7 @@ date: 2023-03-07
 ## 자료형
 
 기억 공간에 이름을 부여하는 것을 변수 선언이라고 합니다. 변수 선언을 위해 C 언어에서는 자료형이라는 것을 제공합니다. 자료형이란 사용하는 자료의 종류나 크기 등의 특징을 나타냅니다.
+
 <br>
 
   * 자료형의 종류
@@ -25,70 +26,68 @@ date: 2023-03-07
       + 문자형(char, unsigned char)
       + 열거형(enum)
       + 형 없음(void)
-
+<br><br>
     - 확장형
       + 배열형(array type)
       + 함수형(function type)
       + 포인터형(pointer type)
       + 구조체형(structure type)
 
-<br>
+
+<br><br>
+
 
   * 기본 자료형의 크기와 범위
-      1. 정수 자료형
+    1. 정수 자료형
+    <br>
 
-      <br>
+    | 정수 자료형 | 범위 | 크기 |
+    | :---: | :---: | :---:|
+    | short <br> (int) short <br> (signed) short <br> (signed) short (int) | -32768 ~ 32767 | 2byte |
+    | unsigned short <br> unsigned short (int) | 0 ~ 65535 | 2byte |
+    | int <br> (signed) int | -2,147,483,648 ~ 2,147,483,647 | 4byte |
+    | unsigned <br> unsigned int | 0 ~ 4,294,967,295 | 4byte |
+    | long <br> long (int) <br> (signed) long <br> (signed) long (int) | -2,147,483,648 ~ 2,147,483,647 | 4byte |
+    | unsigned long <br> unsigned long (int) | 0 ~ 4,294,967,295 | 4byte |
+    | long long <br> long long (int) <br> (signed) long long (int) | -9,223,372,036,854,775,808 ~ 9,223,372,036,854,775,807 | 8byte |
+    | unsigned long long <br> unsigned long long (int) | 0 ~ 18446744073709551615 | 8byte |
 
-      | 정수 자료형 | 범위 | 크기 |
-      | :---: | :---: | :---:|
-      | short <br> (int) short <br> (signed) short <br> (signed) short (int) | -32768 ~ 32767 | 2byte |
-      | unsigned short <br> unsigned short (int) | 0 ~ 65535 | 2byte |
-      | int <br> (signed) int | -2,147,483,648 ~ 2,147,483,647 | 4byte |
-      | unsigned <br> unsigned int | 0 ~ 4,294,967,295 | 4byte |
-      | long <br> long (int) <br> (signed) long <br> (signed) long (int) | -2,147,483,648 ~ 2,147,483,647 | 4byte |
-      | unsigned long <br> unsigned long (int) | 0 ~ 4,294,967,295 | 4byte |
-      | long long <br> long long (int) <br> (signed) long long (int) | -9,223,372,036,854,775,808 ~ 9,223,372,036,854,775,807 | 8byte |
-      | unsigned long long <br> unsigned long long (int) | 0 ~ 18446744073709551615 | 8byte |
+    <br>
 
-      <br><br>
+    2. 실수 자료형
+    <br>
 
-      2. 실수 자료형
+    | 실수형 | 범위 | 크기 |
+    | :---: | :---: | :---: |
+    | float | 3.4 X 10<sup>-38</sup> ~ 3.4 X 10<sup>38</sup> | 4byte |
+    | double | 1.7 X 10<sup>-308</sup> ~ 1.7 X 10<sup>308</sup> | 8byte |
+    | long double | 1.7 X 10<sup>-308</sup> ~ 1.7 X 10<sup>308</sup> | 8byte |
 
-      <br>
+    <br><br>
 
-      | 실수형 | 범위 | 크기 |
-      | :---: | :---: | :---: |
-      | float | 3.4 X 10<sup>-38</sup> ~ 3.4 X 10<sup>38</sup> | 4byte |
-      | double | 1.7 X 10<sup>-308</sup> ~ 1.7 X 10<sup>308</sup> | 8byte |
-      | long double | 1.7 X 10<sup>-308</sup> ~ 1.7 X 10<sup>308</sup> | 8byte |
+    3. 문자형
+    <br>
+    C 언어에서 문자형은 ASCII 코드를 사용하여 처리합니다.
+    <br>
 
-      <br><br>
+    | 문자형 | 범위 | 크기 |
+    | :---: | :---: | :---: |
+    | char | -128 ~ 127 | 1byte |
+    | unsigned char | 0 ~ 255 | 1byte |
 
-      3. 문자형
-      <br>
-      C 언어에서 문자형은 ASCII 코드를 사용하여 처리합니다.
+    <br><br>
 
-      <br>
+    4. 8진수, 16진수의 지정
+    <br>
 
-      | 문자형 | 범위 | 크기 |
-      | :---: | :---: | :---: |
-      | char | -128 ~ 127 | 1byte |
-      | unsigned char | 0 ~ 255 | 1byte |
+    | 진수 | 지정 방법 | 예 |
+    | :---: | :---: | :---: |
+    | 8진수 | 숫자 앞에 0 | int octal_value = 011 |
+    | 16진수 | 숫자 앞에 0x | int hex_value = 0x1A |
 
-      <br><br>
+    <br><br>
 
-      4. 8진수, 16진수의 지정
-
-      <br>
-
-      | 진수 | 지정 방법 | 예 |
-      | :---: | :---: | :---: |
-      | 8진수 | 숫자 앞에 0 | int octal_value = 011 |
-      | 16진수 | 숫자 앞에 0x | int hex_value = 0x1A |
-
-      <br><br>
-
-      5. 열거형
+    5. 열거형
     <br><br>
     형식 : enum 태그명 {열거자 1, 열자 2, ... }
 
@@ -121,7 +120,9 @@ date: 2023-03-07
 
 모든 변수는 어떤 형태의 자료를 저장할 것인지 미리 결정하여 사용하기 전에 정의해야 합니다. 변수 선언은 변수명과 변수의 자료형을 지정하여 변수를 위한 기억공간을 할당하는 것입니다.
 
-  1. 변수에 저장될 값으 크기
+<br>
+
+  1. 변수에 저장될 값의 크기
   <br>
   변수를 선언할 때는 저장하게될 자료의 범위를 고려하여 자료형을 지정해야합니다. 변수가 가지는 범위를 넘어서거나 너무 작은 값을 대입하면 오버플로 또는 언더플로가 발생하여 원치 않는 결과가 나올 수 있습니다.
   <br><br>
