--- a/_posts/C/2023-03-07-C-2.md
+++ b/_posts/C/2023-03-07-C-2.md
@@ -38,7 +38,7 @@ date: 2023-03-07
 
 
   * 기본 자료형의 크기와 범위
-    1. 정수 자료형
+    - 정수 자료형
     <br>
 
     | 정수 자료형 | 범위 | 크기 |
@@ -54,7 +54,7 @@ date: 2023-03-07
 
     <br>
 
-    2. 실수 자료형
+    - 실수 자료형
     <br>
 
     | 실수형 | 범위 | 크기 |
@@ -65,7 +65,7 @@ date: 2023-03-07
 
     <br><br>
 
-    3. 문자형
+    - 문자형
     <br>
     C 언어에서 문자형은 ASCII 코드를 사용하여 처리합니다.
     <br>
@@ -77,7 +77,7 @@ date: 2023-03-07
 
     <br><br>
 
-    4. 8진수, 16진수의 지정
+    - 8진수, 16진수의 지정
     <br>
 
     | 진수 | 지정 방법 | 예 |
@@ -87,7 +87,7 @@ date: 2023-03-07
 
     <br><br>
 
-    5. 열거형
+    - 열거형
     <br><br>
     형식 : enum 태그명 {열거자 1, 열자 2, ... }
 
