--- a/_posts/DB/2023-03-08-DB-2.md
+++ b/_posts/DB/2023-03-08-DB-2.md
@@ -13,14 +13,14 @@ toc_sticky: true
 date: 2023-03-08
 ---
 
-## 관계형 데이터베이스 구조
+## 📚관계형 데이터베이스 구조
 <br>
 
 관계형 모델은 테이블, 컬럼, 기본키-외래키 참조 관계 등으로 현실 관계를 표현합니다. 단순하면서도 직관적인 데이터 표현이 가능하다는 점에서 대다수의 DBMS가 관계형 모델을 사용하고있습니다.
 
 <br>
 
-### 🖥️릴레이션
+### 📄릴레이션
 
   ![릴레이션](/assets/images/img_mysql_table.png)
   <br><br>
@@ -64,7 +64,7 @@ date: 2023-03-08
 
 <br><br><br>
 
-### 🖥️릴레이션 스키마와 인스턴스
+### 📄릴레이션 스키마
 
   - 릴레이션 스키마
   <br>
@@ -78,7 +78,7 @@ date: 2023-03-08
 
 <br><br><br>
   
-### 🖥️관계형 모델의 제약조건
+### 📄관계형 모델의 제약조건
 
 릴레이션의 모든 인스턴스들이 만족해야하는 조건입니다.
 
