Edit Discrete-0 Post

--- a/_posts/Discrete/2023-03-11-Discrete-0.md
+++ b/_posts/Discrete/2023-03-11-Discrete-0.md
@@ -1,5 +1,5 @@
 ---
-title: "이산수학의 개요"
+title: "[Math]이산수학의 개요"
 excerpt: "이산수학 개요"
 
 categories:
@@ -20,20 +20,16 @@ date: 2023-03-11
 * 아날로그: 연속적
 * 디지털: 이산적
 
-<br><br><br>
+<br><br>
 
 ## 📚모델링과 추상화
 * 도구: 수학의 정의, 정리, 계수, 상수항, 변수 등
 * 기법: 근의 공식, 인수분해, 가감법, 대입법 등
 * 방법론: 문제 해결을 위해 적합하게 사용할 기법. 부정 방정식의 해법, 해의 존재 가능성 등
 
-<br>
-
 ### 📄모델링
 * 수학적 모델링: 도구, 기법, 방법론을 이용해 실생활의 문제를 수학적 모델로 변화시키는 것
 * 데이터 모델링: 실생활의 문제를 컴퓨터의 영역으로 옮기는 과정
-
-<br>
 
 ### 📄추상화
 * 추상화: 문제 해결을 위해 필요한 핵심 내용만 남기고 관련이 없는 내용을 제거하여 문제를 단순화 시키는 것
@@ -88,6 +84,8 @@ for x ← 1 to 3
 <br><br><br>
 
 ## 📚이산수학의 응용 분야
+<br>
+
 | 이산수학 주제 | 컴퓨터 응용 분야 |
 | :---: | :---: |
 | 논리 | 전문가 시스템 |
@@ -102,3 +100,5 @@ for x ← 1 to 3
 | 조합이론 | 계산이론 |
 | 정수론 | 정보 보안 |
 | 오토마타 및 형식 언어 | 계산이론, 컴파일러, 프로그래밍 언어 |
+
+<br>
