--- a/_posts/DB/2023-03-08-DB-2.md
+++ b/_posts/DB/2023-03-08-DB-2.md
@@ -78,9 +78,9 @@ date: 2023-03-08
 ### 📄관계형 모델의 제약조건
 릴레이션의 모든 인스턴스들이 만족해야하는 조건입니다.
 
-- 영역 제약조건
-- 키 제약조건
-- 개체 무결성 제약조건
-- 참조 무경성 제약조건
+- 영역 제약조건: 특정 컬럼이 가질 수 있는 값은 도메인에 포함되며 원자적이어야하는 조건
+- 키 제약조건: 레코드를 구별하기 위해 특정 컬럼의 값들이 릴레이션 내부의 레코드를 고유하게 식별할 수 있어야한다는 조건
+- 개체 무결성 제약조건: 기본키 값으로 널(NULL) 값을 저장할 수 없다는 조건
+- 참조 무경성 제약조건: 한 릴레이션에 있는 레코드가 다른 릴레이션의 레코드를 참조하려면 반드시 참조되는 레코드가 해당 릴레이션 안에 있어야 한다는 조건
 
   <br><br>
