--- a/_posts/C/2023-03-07-C-2.md
+++ b/_posts/C/2023-03-07-C-2.md
@@ -143,4 +143,14 @@ enum day2
 <br>
 모든 변수는 선언이 이루어지면 변수에 특정 값을 부여해야 합니다. 이것을 변수의 초기화라고 하는데 C 언어에서 변수를 초기화하지 않으면 에러가 발생할 수 있습니다. 초기화하지 않은 변수에는 기억공간에 존재하고 있던 기존의 값(쓰레기값)이 남아있을 수 있기 때문입니다.
 
-<br>
+```c
+#include <stdio.h>
+
+void main()
+{
+  int i;        // 변수 i 선언
+  int j = 1;    // 변수 j를 1로 초기화
+}
+```
+
+<br><br>
