--- a/_posts/C/2023-03-13-C-3.md
+++ b/_posts/C/2023-03-13-C-3.md
@@ -13,8 +13,7 @@ toc_sticky: true
 date: 2023-03-13
 ---
 
-## 📚선행처리기
-### 📄선행처리기란?
+## 📚선행처리기란?
 선행처리기는 컴파일에 앞서 프로그램 선두에 선언된 지시자들을 미치 처리하는 역할을 합니다. 소스 프로그램을 컴파일러에게 전달하기 전 사용자가 정의한 여러 내용들을 먼저 처리합니다.
 
 <br>
@@ -37,7 +36,7 @@ date: 2023-03-13
 
 <br><br>
 
-### 📄파일 포함
+## 📚파일 포함
 #include 지시어는 C 언어에서 제공되는 헤더 파일을 소스 파일에 읽어 들여 함께 컴파일 할 때 사용됩니다. C 언어에서 prinf(), 나 scanf()를 사용하기 위해서는 이 함수들의 원형(prototype)이 선언되어 있는 표준 입출력 헤더 파일인 stdio.h를 소스 파일에 포함시켜야합니다.
 
 <br>
@@ -62,7 +61,7 @@ date: 2023-03-13
 
 <br><br>
 
-### 📄매크로 정의
+## 📚매크로 정의
 매크로는 #define 지시어를 사용하여 단순 치환되는 자료입니다. 자주 사용되는 명령이나 상수값 등을 대표하는 이름을 붙여 사용하는 대상이 매크로입니다.
 <br>
 
