--- a/_posts/C/2023-03-13-C-3.md
+++ b/_posts/C/2023-03-13-C-3.md
@@ -112,4 +112,33 @@ void main()
 }
 ```
 
+<br><br><br>
+
+## 📚조건부 컴파일
+조건부 컴파일은 조건에 따라 프로그램을 컴파일하는 명령입니다. #if, #elif, #else, #endif 지시자가 사용됩니다.
+
+<br>
+
+```c
+#include <stdio.h>
+#define CONDITION 3
+
+void main()
+{
+  #if CONDITION > 3     // #if 조건문
+    printf("a");        // 명령문
+
+  #elif CONDITION > 0  // #elif 조건문
+    printf("b");       // 명령문
+
+  #else
+    prinf("c");
+  #endif
+}
+```
+
+<br>
+
+#elif와 #else는 필요 없을 경우 생략이 가능합니다. #if는 주어진 조건이 참이면 바로 아래 블록을 컴파일러에게 넘기고 그렇지 않으면 삭제합니다.
 <br><br>
+#if와 #elif 뒤에는 조건문이 오는데 이것은 선행 처리 과정에서 진위 여부를 판단할 수 있어야 합니다. 쉽게 말해, 변수를 지정하거나 함수를 호출할 수 없습니다. 주로 매크로값이 지정됩니다.
