Edit C Posts Tags

--- a/_posts/C/2023-03-15-C-4.md
+++ b/_posts/C/2023-03-15-C-4.md
@@ -55,9 +55,10 @@ void main()
 
 <br>
 
-  1. 출력 양식 변환 기호
-  <br>
-  % 문자는 출력 양식 변환기호로서 자료의 입출력 양식을 지정합니다. '%' 문자 출력은 %%가 사용됩니다.
+1. 출력 양식 변환 기호
+<br>
+% 문자는 출력 양식 변환기호로서 자료의 입출력 양식을 지정합니다. '%' 문자 출력은 %%가 사용됩니다.
+
 <br>
 
 | %문자 | 변환 형식 | 인자의 자료형 |
@@ -77,10 +78,10 @@ void main()
 
 <br><br>
 
-  2. 출력 양식의 편집
-  <br>
-  출력 양식 편집은 %문자 뒤에 숫자 또는 -를 지정하면 됩니다.
-  <br>
+2. 출력 양식의 편집
+<br>
+출력 양식 편집은 %문자 뒤에 숫자 또는 -를 지정하면 됩니다.
+<br>
 
 ```c
 #include <stdio.h>
@@ -124,26 +125,28 @@ void main()
 
 <br>
 
-  1. 입력 양식 변환 기호
-  <br>
+1. 입력 양식 변환 기호
+<br>
 
-  | %문자 | 변환 기능 |
-  | :---: | :---: |
-  | %d | 정수형 입력받음 |
-  | %ld | long 정수형 입력받음 |
-  | %lld | long long 정수형 입력받음 |
-  | %o | 8진수 자료 입력받음 |
-  | %x | 16진수 자료 입력받음 |
-  | %f | 실수형 입력받음 |
-  | %lf | double 실수형 입력받음 |
-  | %c | 문자형 입력받음 |
-  | %s | 문자열 입력받음 |
+| %문자 | 변환 기능 |
+| :---: | :---: |
+| %d | 정수형 입력받음 |
+| %ld | long 정수형 입력받음 |
+| %lld | long long 정수형 입력받음 |
+| %o | 8진수 자료 입력받음 |
+| %x | 16진수 자료 입력받음 |
+| %f | 실수형 입력받음 |
+| %lf | double 실수형 입력받음 |
+| %c | 문자형 입력받음 |
+| %s | 문자열 입력받음 |
 
-  <br><br>
+<br><br>
 
-  2. 자료의 입력
-  <br>
-  자료를 입력할 때 자료가 하나 이상일 경우 자료 사이에 공백을 두어야 합니다. Visual Studio는 scanf() 함수를 권장하지 않는 함수로 지정하여 해당 함수가 포함된 소스 코드를 컴파일하지 않습니다. Visual Studio에서 scanf() 함수를 사용하기 위해서 scanf_s() 함수를 사용하거나 코드 도입부에 #pragma warning(disable:4996)을 포함시켜줘야 합니다.
+2. 자료의 입력
+<br>
+자료를 입력할 때 자료가 하나 이상일 경우 자료 사이에 공백을 두어야 합니다.
+<br>
+Visual Studio는 scanf() 함수를 권장하지 않는 함수로 지정하여 해당 함수가 포함된 소스 코드를 컴파일하지 않습니다. Visual Studio에서 scanf() 함수를 사용하기 위해서 scanf_s() 함수를 사용하거나 코드 도입부에 #pragma warning(disable:4996)을 포함시켜줘야 합니다.
 
 <br>
 
