--- a/_posts/C/2023-03-15-C-4.md
+++ b/_posts/C/2023-03-15-C-4.md
@@ -14,7 +14,7 @@ date: 2023-03-15
 ---
 
 ## 📚표준 입출력 함수
-컴퓨터에 자료를 기억시키는 것을 입력이라 하고, 기억된 자료를 컴퓨터 외부에 나타내는 것을 출력이라고 합니다. C 언어에서 제공하는 표준입출력 함수는 표준 입출력 라이브러리 <stdio.h>에 정의되어 있습니다.
+컴퓨터에 자료를 기억시키는 것을 입력이라 하고, 기억된 자료를 컴퓨터 외부에 나타내는 것을 출력이라고 합니다. C 언어에서 제공하는 표준입출력 함수는 표준 입출력 라이브러리 stdio.h에 정의되어 있습니다.
 
 <br>
 
@@ -38,8 +38,6 @@ date: 2023-03-15
 ### 📄printf()
 모니터에 자료를 출력하고자 할 때 사용되는 양식 지정 출력 함수입니다. print formatted의 의미입니다.
 
-<br>
-
 ```c
 #include <stdio.h>
 
@@ -55,10 +53,9 @@ void main()
 
 <br>
 
-1. 출력 양식 변환 기호
+* 출력 양식 변환 기호
 <br>
 % 문자는 출력 양식 변환기호로서 자료의 입출력 양식을 지정합니다. '%' 문자 출력은 %%가 사용됩니다.
-
 <br>
 
 | %문자 | 변환 형식 | 인자의 자료형 |
@@ -76,12 +73,11 @@ void main()
 | %s | 문자열로 변환 | char* |
 | %p | 포인터 주소값 출력 | void* |
 
-<br><br>
+<br>
 
-2. 출력 양식의 편집
+* 출력 양식의 편집
 <br>
 출력 양식 편집은 %문자 뒤에 숫자 또는 -를 지정하면 됩니다.
-<br>
 
 ```c
 #include <stdio.h>
@@ -108,8 +104,6 @@ void main()
 ### 📄scanf()
 scanf() 함수는 키보드로부터 자료를 입력받을 때 사용되는 양식 지정 입력 함수입니다. 입력 양식 %문자가 아닌 다른 문자를 포함시켜서는 안되고 모든 변수 앞에 주소를 의미하는 &를 붙여야합니다. 문자열이나 배열의 이름은 그 자체로 주소의 의미를 가지고 있어서 &를 생략합니다.
 
-<br>
-
 ```c
 #include <stdio.h>
 
@@ -125,7 +119,7 @@ void main()
 
 <br>
 
-1. 입력 양식 변환 기호
+* 입력 양식 변환 기호
 <br>
 
 | %문자 | 변환 기능 |
@@ -142,12 +136,11 @@ void main()
 
 <br><br>
 
-2. 자료의 입력
+* 자료의 입력
 <br>
 자료를 입력할 때 자료가 하나 이상일 경우 자료 사이에 공백을 두어야 합니다.
 <br>
 Visual Studio는 scanf() 함수를 권장하지 않는 함수로 지정하여 해당 함수가 포함된 소스 코드를 컴파일하지 않습니다. Visual Studio에서 scanf() 함수를 사용하기 위해서 scanf_s() 함수를 사용하거나 코드 도입부에 #pragma warning(disable:4996)을 포함시켜줘야 합니다.
-
 <br>
 
 ```c
@@ -174,3 +167,5 @@ void main()
 ## 📚문자열 단위 입출력
 ### 📄gets()
 ### 📄puts()
+
+<br><br>
