--- a/_posts/C/2023-03-15-C-4.md
+++ b/_posts/C/2023-03-15-C-4.md
@@ -139,20 +139,28 @@ void main()
 * 자료의 입력
 <br>
 자료를 입력할 때 자료가 하나 이상일 경우 자료 사이에 공백을 두어야 합니다.
-<br>
-Visual Studio는 scanf() 함수를 권장하지 않는 함수로 지정하여 해당 함수가 포함된 소스 코드를 컴파일하지 않습니다. Visual Studio에서 scanf() 함수를 사용하기 위해서 scanf_s() 함수를 사용하거나 코드 도입부에 #pragma warning(disable:4996)을 포함시켜줘야 합니다.
+<br><br>
+Visual Studio는 scanf() 함수를 권장하지 않는 함수로 지정하여 해당 함수가 포함된 소스 코드를 컴파일하지 않습니다. Visual Studio에서 scanf() 함수를 사용하기 위해서 scanf_s() 함수를 사용하거나 코드 도입부에 #pragma warning(disable:4996)이나 #define _CRT_SECURE_NO_WARNINGS를 포함시켜줘야 합니다.
+<br><br>
+scanf_s()로 문자열을 입력할 때 인자가 하나 더 필요합니다. scanf_s("입력 양식", &변수, 문자열 크기)와 같이 문자열 크기도 인자로 넘겨주어야 합니다.
 <br>
 
 ```c
 #include <stdio.h>
+#define _CRT_SECURE_NO_WARNINGS
 
 void main()
 {
-  int i;
+	int i;
+	char a[25];
 
-  scanf_s("%d", &i);
+	printf("숫자 입력: ");
+	scanf_s("%d", &i);
+	printf("입력한 숫자: %d \n", i);
 
-  printf("입력한 숫자: %d \n", i);
+	printf("문자열 입력: ");
+	scanf_s("%s", a, sizeof(a));
+	printf("%s \n", a);
 }
 ```
 
@@ -160,12 +168,90 @@ void main()
 
 ## 📚문자 단위 입출력
 ### 📄getchar()
+getchar() 함수는 하나의 문자를 키보드를 통해 입력받아 변수가 가리키는 기억 공간에 저장하는 문자 입력 함수입니다. 문자를 받아들여 저장하는 변수는 정수형이나 문자형으로 선언되어야 합니다.
+<br>
+
+```c
+#include <stdio.h>
+
+void main()
+{
+  char a;
+
+  a = getchar();
+  printf("char = %c \n", a);
+}
+```
+
+<br><br>
+
 ### 📄putchar()
+putchar() 함수는 문자 단위 출력함수입니다. 사용 형식에서 문자 형태는 정수형 변수, 정수형 상수, 문자형 변수, 문자 및 수식을 사용하면 됩니다.
+<br>
+
+```c
+#include <stdio.h>
+
+void main()
+{
+  char a = 'a';
+
+  putchar(a);
+  putchar(a + 1);
+
+  putchar('c');
+  putchar('\n');
+  putchar('c' + 1);
+}
+```
 
 <br><br><br>
 
 ## 📚문자열 단위 입출력
 ### 📄gets()
+gets() 함수는 문자열을 키보드를 통해 입력받아 변수가 가리키는 기억공간에 저장하는 문자열 입력 함수입니다. 변수는 배열이나 포인터 변수를 사용해야 합니다. 문자열을 입력하고 엔터 키를 누르면 null 문자가 입력되어 문자열의 끝을 나타냅니다. gets() 함수가 사용이 안되면 gets_s() 함수를 사용합니다.
+<br>
+
+```c
+#include <stdio.h>
+#pragma warning(disable:4996)
+
+void main()
+{
+	char a[10];
+	char b[10];
+
+	printf("gets()로 문자열 입력: ");
+	gets_s(a);
+	printf("%s \n", a);
+
+	printf("scanf()로 문자열 입력: ");
+	scanf("%s", b);
+	printf("%s \n", b);
+}
+```
+
+<br><br>
+
 ### 📄puts()
+puts() 함수는 문자열 출력 함수입니다. printf() 함수와 달리 문자열을 출력하고 자동으로 줄이 바뀝니다.
+<br>
+
+```c
+#include <stdio.h>
+#pragma warning(disable:4996)
+
+void main()
+{
+  char a[] = "abc";
+  char b[] = "def";
+
+  puts(a);
+  puts(b);
+
+  printf("%s", a);
+  printf("%s", b);
+}
+```
 
 <br><br>
