--- a/_posts/OS/2023-03-16-Os-1.md
+++ b/_posts/OS/2023-03-16-Os-1.md
@@ -83,3 +83,10 @@ date: 2023-03-16
 <br>
 
 프로세스가 멀티쓰레드(다중 쓰레드)로 구성된 경우 컴퓨터에 여러 개의 CPU가 있거나 CPU에 여러 개의 코어가 있다면 멀티쓰레드를 병렬로 처리할 수 있다는 장점이 있습니다. 쓰레드들이 다 다른 작업을 하도록 되어 있는 경우 속도가 느린 작업 때문에 다른 쓰레드들이 기다릴 필요 없이 효율적으로 처리가 가능합니다.
+<br>
+
+![Thread](/assets/images/OS/Multithreaded_process.png)
+<br>
+출처: [https://en.wikipedia.org/wiki/Thread_(computing)](https://en.wikipedia.org/wiki/Thread_(computing))
+
+<br><br>
