Edit Discrete-1 Post

--- a/_posts/Discrete/2023-03-17-Discrete-1.md
+++ b/_posts/Discrete/2023-03-17-Discrete-1.md
@@ -22,7 +22,7 @@ date: 2023-03-17
 * x + 1 = 3　　　　　　-> 명제가 아닙니다.
 * 게임은 재밌다. 　　　 -> 명제가 아닙니다.
 
-<br>
+<br><br>
 
 ### 📄진리값
 참과 거짓을 명제의 진리값이라고 합니다.
@@ -45,7 +45,7 @@ date: 2023-03-17
 ### 📄합성명제
 합성명제란 하나 이상의 명제와 논리연산자들이 결합되어 만들어진 명제를 말합니다. 합성명제의 진리값은 합성 명제를 구성하는 단순명제들의 참과 거짓 여부에 따라 결정됩니다.
 
-<br>
+<br><br>
 
 ### 📄기본 논리연산
 * 논리합(or)
@@ -94,7 +94,7 @@ date: 2023-03-17
 | F | T | F | T | T |
 | F | F | F | F | F |
 
-<br>
+<br><br>
 
 ### 📄조건명제
 명제 p와 q가 있을 때, p가 조건의 역할을 수행하고 q가 결론의 역할을 수행하는 경우, p와 q의 합성명제를 조건명제라고 하고 p → q로 표시합니다. p → q의 진리값은 p가 참이고 q가 거짓일 경우만 거짓이 되고 나머지는 모두 참입니다.
@@ -106,7 +106,7 @@ date: 2023-03-17
 | F | T | T |
 | F | F | T |
 
-<br>
+<br><br>
 
 ### 📄필요조건과 충분조건
 명제 p와 q가 있을 때,
@@ -117,7 +117,7 @@ date: 2023-03-17
 <br><br>
 p → q에서 p를 q의 **충분조건**, q를 p의 **필요조건**이라고 합니다.
 
-<br>
+<br><br>
 
 ### 📄쌍조건명제
 명제 p와 q가 있을 때, p가 조건일 때 q가 결론이 되고 q가 조건일 때 p가 결론이 되는 경우, p와 q의 합성명제를 쌍조건명제라고 하고 p ↔ q로 표시합니다.
@@ -146,6 +146,9 @@ p → q에 대해
   - 이: ~p → ~q
   - 대우: ~q → ~p
 
+<br>
+명제 p → q와 대우는 서로 진리값이 같습니다. 따라서 두 명제는 논리적 동치 관계에 있습니다.
+
 | p | q | ~p | ~q | p → q | q → p | ~p → ~q | ~q → ~p |
 | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
 | T | T | F | F | T | T | T | T |
@@ -153,7 +156,7 @@ p → q에 대해
 | F | T | T | F | T | F | F | T |
 | F | F | T | T | T | T | T | T |
 
-<br>
+<br><br>
 
 ### 📄항진명제와 모순명제
 * 항진명제: 항상 참인 명제
@@ -173,28 +176,59 @@ p → q에 대해
 <br><br><br>
 
 ## 📚술어논리
+논리는 명제논리와 술어논리로 구분합니다.
+* 명제논리: 주어와 술어를 구분하지 않고 문장 전체를 하나의 명제로 간주합니다.
+* 술어논리: 주어와 술어를 구분하여 참과 거짓을 판별하는 법칙을 다룹니다.
 
 ### 📄명제함수
+명제함수란 변수의 값에 의해 참과 거짓을 구별할 수 있는 문장이나 수학적 식을 말합니다. 변수를 포함하고 변수의 영역이 제한된 문장이나 식을 명제함수이고, 여기서 사용된 변수의 영역을 정의역이라고 합니다. 명제함수를 명제로 만들기 위해 두가지 방법이 있습니다.
 
-<br>
+1. 각 변수에 특정한 값을 부여합니다.
+2. 한정자를 이용해 변수의 값을 제한합니다.
+
+<br><br>
 
 ### 📄전체한정자
-
+전체한정자는 '모든'을 말하며, 명제함수 ∀xP(x)와 같이 사용되었을 때 정의역의 모든 x에 대해서 P(x)가 참임을 의미합니다.
 <br>
+전체한정자를 갖는 명제함수가 참이 되기 위해 정의역의 모든 x에 대해 명제함수가 참이어야 합니다.
+
+<br><br>
 
 ### 📄존재한정자
-
+존재한정자는 '존재한다'를 의미하고, 명제함수 ∃xP(x)와 같이 사용되었을 때 P(x)가 참이 되는 어떤 x가 정의역에 존재한다는 것을 의미합니다.
 <br>
+존재한정자를 갖는 명제함수가 참이 되기 위해 정의역의 어떤 원소x에 대해 명제함수가 참이 되어야 합니다.
+
+<br><br>
 
 ### 📄타당성 검사
+한정자가 사용된 명제함수의 타당성을 분석하기 위해 벤 다이어그램을 사용합니다.
 
 <br><br><br>
 
 ## 📚추론
 ### 📄추론
+참이라고 알려진 명제로부터 논리적인 과정을 거쳐 또 다른 명제를 유도하는 과정을 추론이라고 합니다. 추론은 하나 이상의 전제와 하나의 결론으로 구성됩니다.
 
+* 전제: 결론의 근거를 제공하는 이미 알려진 명제
+* 결론: 새로 유도된 명제
 <br>
 
+유효추론은 전제를 참이라고 가정했을 때, 결론이 항상 참이 되는 추론을 말합니다.
+
+<br><br>
+
 ### 📄추론법칙
+기본적인 추론법칙은 논리적 동치를 이용한 대치법입니다.
+
+| 법칙 이름 | 추론 법칙 | 항진명제 |
+| :---: | :---: | :---: |
+| 선언적  부가 | p<br>∴ p ∨ q | p → (p ∨ q) |
+| 단순화 | p ∧ q<br>∴ p | (p ∧ q) → p |
+| 긍정논법 | p<br>p → q<br>∴ q | (p ∧ (p → q)) → q |
+| 부정논법 | ~q<br>p → q<br>∴ ~p | (~q ∧ (p → q)) → ~p |
+| 선언적 삼단논법 또는 소거 | p ∨ q<br>~p<br>∴ q | ((p ∨ q) ∧ ~p) → q |
+| 가설적 삼단논법 또는 추이 | p → q<br>q → r<br>∴ p → r | ((p → q) ∧ (q → r)) → (p → r) |
 
 <br><br>
