--- a/_posts/Discrete/2023-03-17-Discrete-1.md
+++ b/_posts/Discrete/2023-03-17-Discrete-1.md
@@ -97,7 +97,7 @@ date: 2023-03-17
 <br><br>
 
 ### 📄조건명제
-명제 p와 q가 있을 때, p가 조건의 역할을 수행하고 q가 결론의 역할을 수행하는 경우, p와 q의 합성명제를 조건명제라고 하고 p → q로 표시합니다. p → q의 진리값은 p가 참이고 q가 거짓일 경우만 거짓이 되고 나머지는 모두 참입니다.
+명제 p와 q가 있을 때, p가 조건의 역할을 수행하고 q가 결론의 역할을 수행하는 경우, p와 q의 합성명제를 조건명제라고 하고 p → q로 표시합니다. 조건명제는 조건이 거짓이라면 결론과는 상관없이 항상 참입니다. p → q의 진리값은 p가 참이고 q가 거짓일 경우만 거짓이 되고 나머지는 모두 참입니다.
 
 | p | q | p → q |
 | :---: | :---: | :---: |
