Edit Discrete-1 Post

--- a/_posts/Discrete/2023-03-17-Discrete-1.md
+++ b/_posts/Discrete/2023-03-17-Discrete-1.md
@@ -232,3 +232,23 @@ p → q에 대해
 | 가설적 삼단논법 또는 추이 | p → q<br>q → r<br>∴ p → r | ((p → q) ∧ (q → r)) → (p → r) |
 
 <br><br>
+
+## 💡추가
+식이란 상수와 변수를 연산자로 묶어낸 것입니다. 따라서
+
+* 실수식은 실수 집합의 실상수와 실변수를 실수 연산자로 묶어낸 것입니다.
+
+* 논리식은 논리 집합의 논리상수와 논리변수를 논리 연산자로 묶어낸 것입니다.
+
+* 부울식도 부울상수(0, 1)와 부울변수(X, Y)를 부울 연산자로 묶어낸 것입니다.
+
+<br>
+
+논리식과 합성명제는 같다고 보면 됩니다.
+<br>
+논리연산과 부울대수의 연산은 같습니다.
+<br>
+식 앞에 등호(=)가 있으면 함수입니다.
+
+
+<br><br>
