Edit Circuits-1 Post

--- a/_posts/Circuits/2023-03-12-Circuits-1.md
+++ b/_posts/Circuits/2023-03-12-Circuits-1.md
@@ -85,31 +85,80 @@ date: 2023-03-12
 <br>
 r진수를 s진수로 변환하는 경우 먼저 r진수를 10진수로 바꾼 다음 10진수를 s진수로 변환합니다.
 <br>
-예를 들어 5진수를 8진수로 변환한다고 했을 때 5진수를 10진수로 변환하고 바꾼 10진수를 8진수로 변환하면 됩니다. 
-<br>
+예를 들어 5진수를 8진수로 변환한다고 했을 때 5진수를 10진수로 변환하고 바꾼 10진수를 8진수로 변환하면 됩니다.
+
+<br><br>
 
 ### 📄산술연산
+r진수에 대한 산술연산은 10진수의 산술연산과 같습니다. r진수는 r개의 숫자만 사용할 수 있다는 것만 다릅니다.
+<br>
+* 2진수 가산(덧셈)
+<br>
+101<sub>2</sub> + 100<sub>2</sub> = 1001<sub>2</sub>
+
+* 2진수 제산(뺄셈)
+<br>
+1101<sub>2</sub> - 111<sub>2</sub> = 110<sub>2</sub>
+
+* 2진수 승산(곱셈)
+<br>
+110<sub>2</sub> * 11<sub>2</sub> = 10010<sub>2</sub>
+
+* 2진수 제산(나눗셈)
+<br>
+2진수의 나눗셈은 나누어지는 수(피제수)에서 나누는 수(제수)를 계속 빼서 나누어지는 수가 나누는 수보다 최초로 작아지거나 0이 될 때, 그때까지 뺀 횟수가 몫이 되고 빼고 남은 값이 나머지가 됩니다.
+<br>
+110101<sub>2</sub> / 110<sub>2</sub> = 1000<sub>2</sub>, 나머지 101<sub>2</sub>
+
+
+<br>
+
+2진수가 아닌 r진수들의 산술연산은 10진수로 변환하여 연산을 진행해주는 것이 편합니다.
 
 <br><br><br>
 
 ## 📚보수
+보수를 이용하여 컴퓨터에서의 감산이 가산만으로도 가능하다는 것을 설명할 수 있습니다. r진수 N은 r의 보수와 r-1의 보수 두가지 보수가 있습니다.
 ### 📄보수의 개념
-
+* r의 보수
 <br>
 
+$$ N에\;대한\;r의\;보수 = \begin{cases}r^n-N,&N ≠ 0 \\ 0,&N = 0 \end{cases}$$
+
+* r-1의 보수
+<br>
+
+정수부분이 n개의 자리로 구성되고 소수점 아래가 m개의 자리로 구성된 r진수 N에 대한 r-1의 보수에 대한 식입니다.
+<br>
+
+$$ N에\;대한\;(r-1)의\;보수 = r^n - r^m - N $$
+
+<br>
+r의 보수와 r-1의 보수의 관계는 아래와 같습니다.
+
+$$ r의\;보수 = (r-1)의\;보수 + 가장\;낮은\;자리의\;1 $$
+
+<br><br>
+
 ### 📄보수를 이용한 감산
+감수를 부호를 포함하여 r의 보수를 한 다음 피감수에 가산합니다.
+
+$$ \pm A - (\pm B) = \pm A + (\mp B) $$
 
 <br><br><br>
 
 ## 📚부호 있는 2진수
 ### 📄부호 있는 절대치 표현
+부호 있는 절대치 표현방법은 수의 크기와 부호를 나타내는 비트로 구성하여 표현합니다.
 
-<br>
+<br><br>
 
 ### 📄부호 있는 1의 보수 표현
+부호 있는 1의 보수 표현방법은 양수의 경우 부호 있는 절대치 표현방법을 따르고 음수의 경우 부호를 제외한 그 수에 대한 1의 보수를 이용하여 표현합니다.
 
-<br>
+<br><br>
 
 ### 📄부호 있는 2의 보수 표현
+부호 있는 2의 보수 표현방법은 양수의 경우 부호 있는 절대치 표현 방법을 따르고 음수의 경우 부호를 제외한 그 수에 대한 2의 보수를 이용하여 표현합니다.
 
 <br><br>
