--- a/_posts/Circuits/2023-03-12-Circuits-1.md
+++ b/_posts/Circuits/2023-03-12-Circuits-1.md
@@ -153,15 +153,73 @@ $$ \pm A - (\pm B) = \pm A + (\mp B) $$
 ## 📚부호 있는 2진수
 ### 📄부호 있는 절대치 표현
 부호 있는 절대치 표현방법은 수의 크기와 부호를 나타내는 비트로 구성하여 표현합니다.
+<br>
+
+실생활에서 우리는 음수 양수를 구분하기 위해 숫자 앞에 부호를 씁니다. 비트로도 음의 정수를 표현하기 위해 부호와 같은 역할을 하는 비트를 정했습니다. 가장 왼쪽에 위치한 비트(MSB)를 부호로 약속하고 이 부호 비트가 1이면 음수로 0이면 양수로 표현합니다. 예를 들어 4비트 크기의 값이 있을 때 MSB를 부호 비트로 정하고 나머지 3비트를 사용하여 수를 표현할 수 있습니다. 따라서 -7부터 7까지 표현할 수 있습니다. 쉽게 말하면 가장 왼쪽의 비트가 부호를 결정하는 비트가 되는 것 입니다.
+<br>
+
+　　　　양수　　　　　　　　　음수
+<br>
+
+| 부호 | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> | 십진수 |   | 부호 | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> | 십진수 |
+| :---: | :---: | :---: | :---: | :---: |   | :---: | :---: | :---: | :---: | :---: |
+| 0 | 1 | 1 | 1 | +7 |   | 1 | 0 | 0 | 0 | -0 |
+| 0 | 1 | 1 | 0 | +6 |   | 1 | 0 | 0 | 1 | -1 |
+| 0 | 1 | 0 | 1 | +5 |   | 1 | 0 | 1 | 0 | -2 |
+| 0 | 1 | 0 | 0 | +4 |   | 1 | 0 | 1 | 1 | -3 |
+| 0 | 0 | 1 | 1 | +3 |   | 1 | 1 | 0 | 0 | -4 |
+| 0 | 0 | 1 | 0 | +2 |   | 1 | 1 | 0 | 1 | -5 |
+| 0 | 0 | 0 | 1 | +1 |   | 1 | 1 | 1 | 0 | -6 |
+| 0 | 0 | 0 | 0 | +0 |   | 1 | 1 | 1 | 1 | -7 |
 
 <br><br>
 
 ### 📄부호 있는 1의 보수 표현
 부호 있는 1의 보수 표현방법은 양수의 경우 부호 있는 절대치 표현방법을 따르고 음수의 경우 부호를 제외한 그 수에 대한 1의 보수를 이용하여 표현합니다.
+<br>
+
+쉽게 말해 음수를 비트로 표현하는 방법 중 모든 비트를 반전시켜 뒤집는 방법입니다. 0을 1로 1을 0으로 반전시켜 음수로 표현하는 방법이 1의 보수 표현법입니다. 1의 보수 표현법에도 부호 비트를 사용합니다. 아래 표를 보면 +1인 0001<sub>2</sub>의 비트를 뒤집어 -1인 1110<sub>2</sub>으로 표현된 것을 볼 수 있습니다.
+<br>
+
+　　　　양수　　　　　　　　　음수
+<br>
+
+| 부호 | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> | 십진수 |   | 부호 | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> | 십진수 |
+| :---: | :---: | :---: | :---: | :---: |   | :---: | :---: | :---: | :---: | :---: |
+| 0 | 1 | 1 | 1 | +7 |   | 1 | 1 | 1 | 1 | -0 |
+| 0 | 1 | 1 | 0 | +6 |   | 1 | 1 | 1 | 0 | -1 |
+| 0 | 1 | 0 | 1 | +5 |   | 1 | 1 | 0 | 1 | -2 |
+| 0 | 1 | 0 | 0 | +4 |   | 1 | 1 | 0 | 0 | -3 |
+| 0 | 0 | 1 | 1 | +3 |   | 1 | 0 | 1 | 1 | -4 |
+| 0 | 0 | 1 | 0 | +2 |   | 1 | 0 | 1 | 0 | -5 |
+| 0 | 0 | 0 | 1 | +1 |   | 1 | 0 | 0 | 1 | -6 |
+| 0 | 0 | 0 | 0 | +0 |   | 1 | 0 | 0 | 0 | -7 |
 
 <br><br>
 
 ### 📄부호 있는 2의 보수 표현
 부호 있는 2의 보수 표현방법은 양수의 경우 부호 있는 절대치 표현 방법을 따르고 음수의 경우 부호를 제외한 그 수에 대한 2의 보수를 이용하여 표현합니다.
+<br>
+
+위의 문제들을 해결하기 위해 2의 보수 표현법을 사용합니다. 2진수의 모든 자리의 숫자를 뒤집고 1을 더하면 2의 보수를 얻을 수 있습니다. 예를 들어 +1인 0001<sub>2</sub>을 반전시켜 1110<sub>2</sub>에 1을 추가하면 1111<sub>2</sub>이 -1이 되는 것입니다. 그리고 MSB에서 올림이 발생하면 버립니다.
+<br>
+
+　　　　양수　　　　　　　　　음수
+<br>
+
+| 부호 | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> | 십진수 |   | 부호 | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> | 십진수 |
+| :---: | :---: | :---: | :---: | :---: |   | :---: | :---: | :---: | :---: | :---: |
+| 0 | 1 | 1 | 1 | +7 |   | 1 | 1 | 1 | 1 | -1 |
+| 0 | 1 | 1 | 0 | +6 |   | 1 | 1 | 1 | 0 | -2 |
+| 0 | 1 | 0 | 1 | +5 |   | 1 | 1 | 0 | 1 | -3 |
+| 0 | 1 | 0 | 0 | +4 |   | 1 | 1 | 0 | 0 | -4 |
+| 0 | 0 | 1 | 1 | +3 |   | 1 | 0 | 1 | 1 | -5 |
+| 0 | 0 | 1 | 0 | +2 |   | 1 | 0 | 1 | 0 | -6 |
+| 0 | 0 | 0 | 1 | +1 |   | 1 | 0 | 0 | 1 | -7 |
+| 0 | 0 | 0 | 0 | +0 |   | 1 | 0 | 0 | 0 | -8 |
+
+<br>
+
+2의 보수 표현법에서 0을 표현하는 방법은 한 가지 입니다. +0인 0000<sub>2</sub>을 뒤집으면 1111<sub>2</sub>이 되고 여기에 1을 더하면 MSB에 올림이 발생하는데 MSB에서 올림이 발생하면 그 값은 버린다고 했으므로 0000<sub>2</sub>과 같아집니다. 비트 덧셈 연산도 해봅시다. +1인 0001<sub>2</sub>과 -1인 1111<sub>2</sub>을 더하면 MSB에 올림 값 1이 생겨 10000<sub>2</sub>이 되는데 올림 값 1을 버리면 나머지 비트들은 0000<sub>2</sub>이 되어 결과는 10진수로 0인 0000<sub>2</sub>이 됩니다.
 
 <br><br>
