--- a/_posts/Discrete/2023-04-01-Discrete-3.md
+++ b/_posts/Discrete/2023-04-01-Discrete-3.md
@@ -49,20 +49,46 @@ A가 B의 부분집합이고 A와 B가 같지 않다면 A는 B의 **진부분집
 <br>
 집합 A와 B가 공통된 원소를 가지고 있지 않은 경우 **서로소**라고 합니다.
 <br>
-A ∩ B = ø
+
+$$ A ∩ B = ø $$
 
 * 쌍으로 서로소
 <br>
 n개의 집합 A<sub>1</sub>, A<sub>2</sub>, ..., A<sub>n</sub>이 있을 때 서로 다른 임의의 두 집합 A<sub>i</sub>와 A<sub>j</sub>가 공통된 원소를 가지고 있지 않을 경우 **쌍으로 서로소**라고 합니다.
 
+$$ i ≠ j일\,때,\;A_i ∩ A_j = ø $$
+
 * 분할
 <br>
 집합 A를 ø이 아닌 부분집합으로 나눴을 때 A의 모든 원소들이 나누어진 부분집합들 중 하나에만 포함되어 있을 경우, 이 부분집합들을 원소로 하는 집합을 A의 **분할**이라고 합니다.
+<br><br>
+분할의 조건
+<br>
+  1. i = 1, ..., n에 대하여 A<sub>i</sub>는 ø이 아니면서 A의 부분집합이다.
+  2. A = A<sub>1</sub> ∪ A<sub>2</sub> ∪ A<sub>3</sub> ... ∪ A<sub>n</sub>
+  3. A<sub>1</sub>, A<sub>2</sub>, A<sub>3</sub> ..., A<sub>n</sub>은 쌍으로 서로소이다.
+<br><br>
+📍집합 {1, 2, 3}의 모든 분할을 구하시오.
+<br>
+{\{1}, {2}, {3}}
+<br>
+{\{1, 2}, {3}}
+<br>
+{\{1, 3}, {2}}
+<br>
+{\{1}, {2 ,3}}
+<br>
+{\{1, 2, 3}}
+
 
 <br><br>
 
 ### 📄멱집합
 집합 A에 대하여 A의 모든 부분집합들의 집합을 A의 멱집합이라고 합니다. P(A)로 나타냅니다.
+<br><br>
+📍집합 A = {1, 2, 3}, A의 멱집합을 구하시오.
+<br>
+P(A) = { ø, {1}, {2}, {3}, {1, 2}, {1, 3}, {2, 3}, {1, 2, 3}}
 
 <br><br><br>
 
@@ -153,7 +179,9 @@ B ⊆ (A ∪ B)
 <br>
 집합의 대수법칙을 증명하는 가장 기본적인 방법입니다. 하나의 집합이 다른 집합의 부분집합임을 증명하기 위해 원소의 포함관계를 이용하는 증명방식입니다.
 <br><br>
-$$ 집합 X와 Y가 주어지고 X ⊆ Y임을 증명하고자 한다면, X의 임의의 원소 x에 대해서 항상 x ∈ Y가 만족함을 보인다. $$
+
+$$ 집합\,X와\,Y가\,주어지고\,X\,⊆\,Y임을\,증명하고자\,한다면, \\ X의\,임의의\,원소\,x에\,대해서\,항상x\,∈\,Y가\,만족함을\,보인다. $$
+
 
 <br>
 
