--- a/_posts/C/2023-04-02-C-9.md
+++ b/_posts/C/2023-04-02-C-9.md
@@ -120,6 +120,7 @@ void static_test()
 
 ```c
 // main.c
+
 #include <stdio.h>
 #pragma warning(disable:4996)
 
@@ -136,7 +137,10 @@ void main()
   extern_sample();
 }
 
+
+
 // sample.c
+
 #include <stdio.h>
 
 extern char s[];                        // 외부변수 선언
@@ -152,7 +156,7 @@ void extern_sample()
 ### 📄레지스터 변수
 레지스터 변수는 CPU 내의 레지스터 자료를 저장할 때 사용됩니다. 레지스터로의 자료 입출력 속도가 기억장치 보다 빠르기 때문에 프로그램의 실행 속도를 높이기 위해 사용합니다. 반복문에서의 카운터 변수로 많이 사용됩니다. 레지스터 변수는 자동변수와 같은 속성을 가지고 있고 보통 정수형 자료에 사용되며, 전역변수로는 선언될 수 없습니다. 하지만 CPU의 레지스터 개수는 한정되어 있어 되도록 자동변수를 사용하는 것이 좋습니다.
 
-레지스터 변수 특징
+📍레지스터 변수 특징
 <br>
 * 32bit 컴퓨터의 레지스터 크기는 4byte, 64bit 컴퓨터의 레지스터 크기는 8byte입니다. 이 크기를 넘어서는 자료형은 레지스터 변수로 사용할 수 없습니다.
 
