--- a/_posts/C/2023-04-02-C-10.md
+++ b/_posts/C/2023-04-02-C-10.md
@@ -63,7 +63,189 @@ void main()
 <br><br><br>
 
 ## 📚다차원 배열
+2차원 이상의 배열을 다차원 배열이라고 합니다. 일반적으로 2차원 배열과 3차원 배열이 사용됩니다. 2차원 배열은 선언문에 2 개의 첨자를 가집니다. 
+
+### 📄2차원 배열
+
+```c
+자료형 배열이름[행의 수][열의 수];
+
+// 2차원 배열 선언
+int array[3][3];
+
+// 2차원 배열 초기화
+int array[3][3] = {1, 2, 3, 4, 5, 6, 7, 8, 9};
+int array[3][3] = { {1, 2, 3}, {4, 5, 6}, {7, 8, 9} };
+int array[3][3] = { {1, 2, 3}, 
+                    {4, 5, 6}, 
+                    {7, 8, 9} };
+```
+
+2차원 배열이 선언되면 실제 기억 공간에는 1차원으로 자료가 순서대로 저장됩니다. 2차원 배열에서 행만 표시하고 열을 생략하면 해당 행이 배열이 시작되는 주소를 가리킵니다.
+
+<br>
+
+2차원 배열 사용
+
+```c
+#include <stdio.h>
+
+void main()
+{
+    static int score[3][2] = { {100, 95},
+                                {90, 85},
+                                {70, 85} };
+
+    int sum;
+
+    printf("번호\t국어\t수학\t합계 \n");
+
+    for (int i = 0; i < 3; ++i)
+    {
+        sum = 0;
+        printf("%3d", i + 1);
+
+        for (int j = 0; j < 2; ++j)
+        {
+            printf("\t%3d", score[i][j]);
+            sum += score[i][j];
+        }
+
+        printf("\t%3d \n", sum);
+    }
+}
+```
+
+<br><br>
+
+### 📄3차원 배열
+
+```c
+자료형 배열이름[행의 수][열의 수];
+
+// 3차원 배열 선언
+int array[2][2][2];
+
+// 3차원 배열 초기화
+int array[2][2][2] = {1, 2, 3, 4, 5, 6, 7, 8};
+int array[2][2][2] = { { {1, 2}, {3, 4} }, { {5, 6}, {7, 8} } };
+```
+<br>
+
+3차원 배열 사용
+
+```c
+#include <stdio.h>
+#pragma warning(disable:4996)
+
+void main()
+{
+    static int score[2][2][2];              // 2개 반의 학생 2명 2과목 성적
+
+    int sum[2] = { 0 };                     // 국어, 수학 합계
+
+    for (int a = 0; a < 2; ++a)
+    {
+        for (int b = 0; b < 2; ++b)
+        {
+            printf("%d반 %d번 학생의 국어 점수, 수학 점수: ", a + 1, b + 1);
+            scanf("%d %d", &score[a][b][0], &score[a][b][1]);
+        }
+
+        printf("\n");
+    }
+
+    for (int c = 0; c < 2; ++c)
+    {
+        for (int d = 0; d < 2; ++d)
+        {
+            for (int e = 0; e < 2; ++e)
+            {
+                sum[e] += score[c][d][e];
+            }
+        }
+    }
+
+    printf("전체반 4명의 국어 총점: %d, 평균: %d \n", sum[0], sum[0] / 4);
+    printf("전체반 4명의 수학 총점: %d, 평균: %d \n", sum[0], sum[0] / 4);
+}
+```
+
+<br><br><br>
 
 ## 📚char형 배열과 문자열
+C 언어는 문자열에 대한 자료형이 없습니다. 문자열을 처리하기 위해 char형 배열을 사용하거나 포인터를 사용해야 합니다. 문자열은 " "로 묶인 문자 나열을 말하고 특수한 배열로 취급합니다. C 언어는 문자열의 마지막 부분에 null 문자('\0')를 자동으로 삽입합니다.
+
+```c
+char 배열이름[문자열 길이 + 1];
+char str[11];
+
+// char형 배열 선언 및 초기화
+char str[ ] = "Hello World!";
+char str[ ] = { 'H', 'E', 'L', 'L', 'O', '\0'};
+```
+
+<br>
+
+문자열 저장 배열 사용
+
+```c
+#include <stdio.h>
+#pragma warning(disable:4996)
+
+void main()
+{
+    char strIn[25], strOut[25];     // 문자열 저장 배열 선언
+    int i = 0;
+
+    printf("문자열 입력: ");
+    scanf("%s", strIn);
+
+    do
+    {
+        strOut[i] = '*';
+        ++i;
+    } while (strIn[i] != '\0');
+
+    strOut[i] = '\0';
+
+    printf("입력 문자열 배열 strIn = %s \n", strIn);
+    printf("출력 문자열 배열 strOut = %s \n", strOut);
+}
+```
+
+<br><br><br>
 
 ## 📚함수와 배열
+배열을 함수의 매개변수로 사용할 때 함수 호출 시 첨자를 빼고, 배열 이름만 명시하여 호출해야 합니다. 매개변수가 1차원 배열이라면 배열의 크기는 명시하지 않아도 되고, 다차원 배열의 경우 가장 높은 차원의 크기를 생략할 수 있습니다. 만약 배열의 크기를 명시할 경우 매개변수로 넘겨주는 배열의 크기가 항상 명시한 값으로 제한됩니다. 배열이 매개변수로 전달될 때 배열 값이 복사되어 전달되는 것이 아니라 배열의 위치만 전달됩니다. 쉽게 말해, 참조에 의한 전달 방법을 사용합니다.
+<br><br>
+```c
+#include <stdio.h>
+
+void GetSum(int score[][3], int, int);
+
+void main()
+{
+    int score[2][3] = { {30, 50, 20},
+                        {10, 40, 30} };
+
+    GetSum(score, 2, 3);
+}
+
+void GetSum(int score[][3], int row, int col)
+{
+    int sum[2] = { 0 };
+    
+    for (int i = 0; i < row; ++i)
+    {
+        for (int j = 0; j < col; ++j)
+        {
+            sum[i] += score[i][j];
+        }
+
+        printf("sum[%d] = %d \n", i, sum[i]);
+    }
+}
+```
+
+<br><br>
