--- a/_posts/C/2023-03-15-C-4.md
+++ b/_posts/C/2023-03-15-C-4.md
@@ -106,6 +106,7 @@ scanf() 함수는 키보드로부터 자료를 입력받을 때 사용되는 양
 
 ```c
 #include <stdio.h>
+#pragma warning(disable:4996)
 
 void main()
 {
@@ -140,14 +141,14 @@ void main()
 <br>
 자료를 입력할 때 자료가 하나 이상일 경우 자료 사이에 공백을 두어야 합니다.
 <br><br>
-Visual Studio는 scanf() 함수를 권장하지 않는 함수로 지정하여 해당 함수가 포함된 소스 코드를 컴파일하지 않습니다. Visual Studio에서 scanf() 함수를 사용하기 위해서 scanf_s() 함수를 사용하거나 코드 도입부에 #pragma warning(disable:4996)이나 #define _CRT_SECURE_NO_WARNINGS를 포함시켜줘야 합니다.
+Visual Studio는 scanf() 함수를 권장하지 않는 함수로 지정하여 해당 함수가 포함된 소스 코드를 컴파일하지 않습니다. Visual Studio에서 scanf() 함수를 사용하기 위해서 코드 도입부에 #pragma warning(disable:4996)이나 #define _CRT_SECURE_NO_WARNINGS를 포함시켜줘야 합니다. 또한 scanf_s() 함수를 사용할 수 있습니다.
 <br><br>
-scanf_s()로 문자열을 입력할 때 인자가 하나 더 필요합니다. scanf_s("입력 양식", &변수, 문자열 크기)와 같이 문자열 크기도 인자로 넘겨주어야 합니다.
+💡 scanf_s()로 문자열을 입력할 때 인자가 하나 더 필요합니다. scanf_s("입력 양식", &변수, 문자열 크기)와 같이 문자열 크기도 인자로 넘겨주어야 합니다.
 <br>
 
 ```c
-#include <stdio.h>
 #define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
 
 void main()
 {
