--- a/_posts/C/2023-03-23-C-6.md
+++ b/_posts/C/2023-03-23-C-6.md
@@ -14,7 +14,7 @@ date: 2023-03-23
 ---
 
 ## 📚if문
-순차적으로 실행되는 프로그램의 순서를 제어하는 명령문을 제어문이라고 합니다. 선택 제어문은 주어진 조건에 따라 실행이 분기하여 다른 명령문을 수행하도록 하는 제어문입니다.
+순차적으로 실행되는 프로그램의 순서를 제어하는 명령문을 제어문이라고 합니다. 선택 제어문은 주어진 조건에 따라 실행이 분기하여 다른 명령문을 수행하도록 하는 제어문입니다. if문의 주어진 조건을 만족하면 중괄호 안의 명령문을 수행하고, 만족하지 않으면 중괄호 밖의 명령문을 수행합니다.
 
 ### 📄단순 if문
 
@@ -29,6 +29,8 @@ void main()
   printf("숫자 입력: ");
   scanf_s("%d", &a);
 
+  // a가 10보다 작으면 중괄호 안의 명령문 수행
+  // a가 10보다 작지 않으면 중괄호 밖의 명령문 수행
   if(a < 10)
   {
     printf("입력한 숫자가 10보다 작음. \n");
