--- a/_posts/C/2023-04-10-C-11.md
+++ b/_posts/C/2023-04-10-C-11.md
@@ -63,6 +63,26 @@ void main()
 포인터 변수의 참조란 어떤 포인터 변수가 가리키는 내용을 읽어 내거나 값을 대입하는 것을 말합니다.
 
 ```c
+int *p, i = 1;
+
+// 변수 i의 값 1을 p가 가리키는 주소에 대입해야 하는데
+// 포인터 변수 p가 기억공간 내 몇번지를 가리키는지 알 수 없음
+*p = i;
+
+
+// 상수 5를 p가 가리키는 주소에 대입해야 하는데
+// 포인터 변수 p가 기억공간 내 몇번지를 가리키는지 알 수 없음
+*p = 5;
+
+// 포인터 변수가 가리키는 번지 안에 값을 대입할 때 사용하는 가장 정확한 방법
+// 변수 i의 주소를 포인터 변수 p에 넣고 그 주소의 기억장소에 값을 대입
+p = &i;
+*p = 10;
+```
+
+<br>
+
+```c
 #include <stdio.h>
 
 void main()
@@ -80,3 +100,79 @@ void main()
 ```
 
 <br><br>
+
+### 📄void형 포인터
+컴파일 시 자료형을 결정하지 못하고, 프로그램 실행 시 포인터의 자료형이 결정되는 경우 void형 포인터를 사용합니다. 어떤 자료형을 가지는 기억공간의 주소를 넘겨주는지 알려줘야 하기 때문에 반드시 명시적 형변환이 필요합니다.
+
+```c
+#include <stdio.h>
+
+void main()
+{
+    int a = 10;
+    char b = 'a';
+    void* p = NULL;   // void형 포인터 선언 및 초기화
+
+    p = (int*)&a;     // void형 포인터 p에 int형 변수 a의 주소를 명시적 형변환하여 대입
+    
+    printf("*p = %d \n", *(int*)p);
+
+    p = (char*)&b;    // void형 포인터 p에 char형 변수 b의 주소를 명시적 형변환하여 대입
+    
+    printf("*p = %c \n", *(int*)p);
+}
+```
+
+<br><br><br>
+
+## 📚포인터 연산
+포인터 변수에 1을 증감하는 것은 포인터가 가리키고 있는 주소를 중심으로 이후, 이전의 자료가 있는 곳을 가리키는 것을 의미합니다. 쉽게 말해, 값의 변화가 아니고 주소의 이동 입니다. 포인터 변수 p가 있을 때, p를 1 증가시키면 증가되는 주소는 *p의 자료형의 byte수가 됩니다. 예를 들면 int형 포인터 변수에 1을 증가시키면 4byte 이후 자료가 있는 곳을 가리킵니다. 또한 포인터 연산은 덧셈과 뺄셈만 가능합니다.
+
+```c
+#include <stdio.h>
+
+void main()
+{
+    int* p;
+    int a[5] = { 1, 2, 3, 4, 5 };
+    p = &a[0];                                // 배열 첫 번째 원소 주소값을 포인터 변수 p에 저장
+
+    printf("*p     == %d \n", *p);
+    printf("*p++   == %d \n", *p++);        // 포인터 p의 값을 출력 후 주소 1 증가
+
+    printf("*++p   == %d \n", *++p);        // 주소 1 증가 후 포인터 p의 값을 출력
+
+    p = p + 3;                              // 포인터 p의 주소 3 증가
+    printf("*p        == %d \n", *p);
+    printf("a[3]      == %d \n", a[3]);
+    printf("*p + 3    == %d \n", *p + 3);   // p번지 내용에 3을 더한 값
+    printf("*(p - 3)  == %d \n", *(p + 3)); // (p번지 - 3) 번지의 내용
+}
+```
+
+<br><br><br>
+
+## 📚포인터와 배열
+### 📄char형 포인터
+문자열을 처리할 때 char형 배열을 사용해도 되지만 char형 포인터를 사용해도 됩니다.
+
+```c
+char *c = "Hello";
+```
+c의 값은 문자열 "Hello"가 들어있는 기억공간의 시작 주소입니다. 그리고 문자열 끝에는 null문자가 붙습니다.따라서 *c의 값은 문자열 "Hello"가 아니고 문자열의 첫 번째 문자 "H"가 됩니다.
+
+<br>
+
+```c
+#include <stdio.h>
+
+void main()
+{
+    char* c = "Hello";
+
+    for (int i = 0; i < 5; ++i)
+    {
+        printf("*(c+%d): %c \n", i, *(c + i));
+    }
+}
+```
