Edit GCD-LCM Post

--- a/_posts/Algorithm_Implementation/2023-04-09-GCD-LCM.md
+++ b/_posts/Algorithm_Implementation/2023-04-09-GCD-LCM.md
@@ -1,6 +1,6 @@
 ---
-title: "[C++]최대공약수와 최소공배수 구현"
-excerpt: "최대공약수와 최소공배수 구현"
+title: "[C++]최대공약수와 최소공배수 구하기"
+excerpt: "최대공약수와 최소공배수 구하기"
 
 categories:
   - Algorithm_Implementation
