--- a/_posts/Algorithm_Implementation/2023-04-09-GCD-LCM.md
+++ b/_posts/Algorithm_Implementation/2023-04-09-GCD-LCM.md
@@ -13,7 +13,7 @@ toc_sticky: true
 date: 2023-04-09
 ---
 
-## 🔐최대공약수
+## 🤔최대공약수
 ### 🔑반복문으로 구현
 ```cpp
 #include <iostream>
@@ -69,7 +69,7 @@ int main()
 
 <br><br>
 
-## 🔐최소공배수
+## 🤔최소공배수
 ### 🔑최대공약수를 이용하여 구현
 ```cpp
 #include <iostream>
