Edit Stack Post

--- a/_posts/DataStructure_Implementation/2023-04-09-Stack.md
+++ b/_posts/DataStructure_Implementation/2023-04-09-Stack.md
@@ -13,13 +13,13 @@ toc_sticky: true
 date: 2023-04-09
 ---
 
-## 🔐스택
+## 🤔스택
 ### 🔑스택 구현
 스택은 위로 쌓는 방식이라서 top이라는 인덱스를 만들어 구현해볼 수 있습니다.
-배열의 인덱스는 0부터 시작이므로 top을 -1로 초기화하겠습니다.
+배열의 인덱스는 0부터 시작이므로 top을 -1로 초기화해줍니다.
 
 ```cpp
-const int STACK_SIZE = 10000;
+const int STACK_SIZE = 10;
 
 struct Stack
 {
@@ -35,6 +35,8 @@ struct Stack
 스택이 비어있는지 확인하는 방법은 top 인덱스가 0보다 작을 때는 원소가 하나도 없는 상태이므로 비어있는 것이고 top 인덱스가 0보다 크거나 같은 숫자일 때는 비어있지 않은 상태입니다.
 
 스택에 원소를 넣으면 top인덱스가 증가하므로 top 인덱스 자체가 스택의 사이즈가 됩니다. 하지만 top이 처음에 -1로 초기화되어 스택의 사이즈가 음수가 될 수는 없으므로 top 인덱스에 1을 더해줍니다.
+
+<br><br>
 
 ### 🔑전체 소스 코드
 ```cpp
@@ -157,3 +159,5 @@ void Top(Stack& stack)
     std::cout << stack.container[stack.topIndex] << '\n';
 }
 ```
+
+<br><br>
