--- a/_posts/C/2023-04-10-C-11.md
+++ b/_posts/C/2023-04-10-C-11.md
@@ -176,3 +176,49 @@ void main()
     }
 }
 ```
+
+<br><br>
+
+### 📄포인터와 배열
+배열은 포인터의 일부분입니다. 모든 배열은 포인터로 표현할 수 있습니다.
+
+```c
+char* str, s[] = "Hello";
+str = s;
+```
+
+str이 가리키는 기억장소의 내용은 배열 s의 첫번째 원소 "H"입니다. *(str + 1)은 s[1]인 "e"와 같습니다. 배열 이름 그 자체가 포인터라 배열의 이름만 가지고도 포인터처럼 사용할 수 있습니다.
+
+포인터를 이용한 2차원 배열 참조
+```c
+#include <stdio.h>
+
+void main()
+{
+    static int arr[3][3] = { {1, 2, 3}, {4, 5, 6}, {7, 8, 9} };
+    int* p;
+
+    p = arr[0];
+
+    for (int i = 0; i < 3; ++i)
+    {
+        for (int j = 0; j < 3; ++j)
+        {
+            printf("%d ", *p);
+
+            ++p;
+        }
+
+        printf("\n");
+    }
+}
+```
+
+<br><br>
+
+### 📄포인터와 배열의 차이
+* 배열과 포인터는 호환이 가능하지만 포인터 변수에는 다른 주소 값을 넣을 수 있지만 배열 변수에는 다른 값을 넣을 수 없다는 차이가 있습니다.
+
+* 배열 이름의 값을 변경하는 것은 불가능하나 포인터에서는 ++p 또는 --p와 같이 값이 변경 될 수 있다는 차이점이 있습니다.
+
+* 배열과 포인터는 기억공간의 확보 방식에 차이가 있습니다. 배열은 기억공간에 자료 영역을 고정적으로 확보하는데 포인터는 유동적으로 자료 영역을 확보합니다. 포인터는 필요할 때만 자료용 기억공간을 확보하고 그렇지 않을 때는 자료용 기억공간을 확보하지 않습니다. 따라서 가변적인 자료를 사용해야할 때 배열 보다 포인터를 사용하는 것이 효율적입니다.
