Edit PrimeNum Post

--- a/_posts/Algorithm_Implementation/2023-04-12-PrimeNum.md
+++ b/_posts/Algorithm_Implementation/2023-04-12-PrimeNum.md
@@ -105,35 +105,39 @@ int main()
     int num;
     int count = 0;
 
+    std::cout << "Enter a number: ";
     std::cin >> num;
 
     int* arr = new int[num + 1];
 
-    for(int i = 2; i <= num; ++i)
+    for (int i = 2; i <= num; ++i)
     {
         arr[i] = i;
     }
 
-    for(int i = 2; i <= std::sqrt(num); ++i)
+    for (int i = 2; i <= std::sqrt(num); ++i)
     {
-        if(arr[i] == 0)
+        if (arr[i] == 0)
         {
             continue;
         }
 
-        for(int j = 2 * i; j <= num; j += i)
+        for (int j = 2 * i; j <= num; j += i)
         {
             arr[j] = 0;
         }
     }
 
-    for(int i = 2; i <= num; ++i)
+    for (int i = 2; i <= num; ++i)
     {
-        if(arr[i] != 0)
+        if (arr[i] != 0)
         {
             std::cout << arr[i] << " ";
         }
     }
+
+    delete[] arr;
+    arr = nullptr;
 }
 ```
 
