--- a/_posts/C/2023-04-10-C-11.md
+++ b/_posts/C/2023-04-10-C-11.md
@@ -222,3 +222,47 @@ void main()
 * 배열 이름의 값을 변경하는 것은 불가능하나 포인터에서는 ++p 또는 --p와 같이 값이 변경 될 수 있다는 차이점이 있습니다.
 
 * 배열과 포인터는 기억공간의 확보 방식에 차이가 있습니다. 배열은 기억공간에 자료 영역을 고정적으로 확보하는데 포인터는 유동적으로 자료 영역을 확보합니다. 포인터는 필요할 때만 자료용 기억공간을 확보하고 그렇지 않을 때는 자료용 기억공간을 확보하지 않습니다. 따라서 가변적인 자료를 사용해야할 때 배열 보다 포인터를 사용하는 것이 효율적입니다.
+
+<br><br><br>
+
+## 📚포인터 배열
+포인터들의 배열을 포인터 배열이라고 합니다. 즉, 배열의 원소가 포인터로서 포인터의 집합을 의미합니다. 포인터 배열은 주로 문자열 배열을 처리할 때 사용됩니다.
+
+```c
+#include <stdio.h>
+
+void main()
+{
+    int a[] = { 1, 2, 3, 4 };
+    int b[] = { 5, 6, 7, 8 };
+
+    int* pa[2];
+    pa[0] = a;
+    pa[1] = b;
+
+    printf("*(pa[0]) = %d \n", *(pa[0]));
+    printf("*(pa[0] + 1) = %d \n", *(pa[0] + 1));
+    printf("*pa[1] = %d \n", *pa[1]);
+    printf("*pa[1] + 15 = %d \n", *pa[1] + 15);
+}
+```
+
+<br><br><br>
+
+## 📚이중 포인터
+이중 포인터는 자료가 있는 곳을 2중으로 가리키는 포인터입니다. 이중 포인터가 가리키는 주소에는 주소값이 들어있습니다. 다시 이중 포인터가 가리키는 주소를 찾아가면 자료를 참조하게 됩니다.
+
+```c
+#include <stdio.h>
+
+void main()
+{
+    char a = 'a', *p, **pp;
+    p = &a;
+    pp = &p;
+
+    printf("**pp = %c", **pp);
+}
+```
+
+<br><br>
