--- a/_posts/Blog/2023-02-25-BlogURL.md
+++ b/_posts/Blog/2023-02-25-BlogURL.md
@@ -5,7 +5,7 @@ excerpt: "깃헙 페이지 제작에 참고한 블로그 링크들"
 categories:
   - Blog
 tags:
-  - [Blog, Github Pages]
+  - [Github Pages]
 
 toc: true
 toc_sticky: true
