--- a/_posts/Circuits/2023-03-01-Circuits-0.md
+++ b/_posts/Circuits/2023-03-01-Circuits-0.md
@@ -5,7 +5,7 @@ excerpt: "디지털 논리회로와 집적회로"
 categories:
   - Circuits
 tags:
-  - [디지털 논리회로, Digital Circuits]
+  - [디지털 논리회로, 집적회로]
 
 toc: true
 toc_sticky: true
