--- a/_posts/Circuits/2023-03-12-Circuits-1.md
+++ b/_posts/Circuits/2023-03-12-Circuits-1.md
@@ -5,7 +5,7 @@ excerpt: "수치 데이터"
 categories:
   - Circuits
 tags:
-  - [디지털 논리회로, Digital Circuits, 진법, 보수]
+  - [디지털 논리회로, 진법, 보수]
 
 toc: true
 toc_sticky: true
