--- a/_posts/Circuits/2023-03-22-Circuits-2.md
+++ b/_posts/Circuits/2023-03-22-Circuits-2.md
@@ -5,7 +5,7 @@ excerpt: "디지털 코드"
 categories:
   - Circuits
 tags:
-  - [디지털 논리회로, Digital Circuits, 디지털 코드]
+  - [디지털 논리회로, 디지털 코드]
 
 toc: true
 toc_sticky: true
