--- a/_posts/Circuits/2023-03-23-Circuits-3.md
+++ b/_posts/Circuits/2023-03-23-Circuits-3.md
@@ -5,7 +5,7 @@ excerpt: "논리연산과 논리게이트"
 categories:
   - Circuits
 tags:
-  - [디지털 논리회로, Digital Circuits, 논리연산]
+  - [디지털 논리회로, 논리연산]
 
 toc: true
 toc_sticky: true
