--- a/_posts/Discrete/2023-03-17-Discrete-1.md
+++ b/_posts/Discrete/2023-03-17-Discrete-1.md
@@ -5,7 +5,7 @@ excerpt: "논리"
 categories:
   - Discrete
 tags:
-  - [이산수학, Discrete Math, 논리, 명제, 논리연산, 술어논리, 추론]
+  - [이산수학, 논리, 명제, 논리연산, 술어논리, 추론]
 
 toc: true
 toc_sticky: true
