--- a/_posts/OS/2023-04-16-Os-3.md
+++ b/_posts/OS/2023-04-16-Os-3.md
@@ -244,7 +244,26 @@ $$ 응답비율 = {대기시간 + 예상실행시간 \over 예상실행시간} =
 
 <br><br>
 
-### 📄다단계 피드백 큐 스케줄링
+### 📄다단계 큐 스케줄링
+다단계 큐(MultiLevel Queue) 스케줄링은 우선순위에 따라 준비 큐를 여러 개 사용하는 스케줄링 알고리즘입니다. 프로세스는 우선순위에 따라 해당 우선순위의 큐에 삽입됩니다. 각각의 큐는 라운드 로빈 방식으로 운영되고 우선순위에 따라 다단계로 나뉘어 있기 때문에 프로세스가 큐에 삽입되는 것만으로 우선순위가 결정됩니다.
 
+다단계 큐 스케줄링은 우선순위에 맞게 다양한 스케줄링이 가능한 선점형 방식의 알고리즘입니다. 우선순위에 따라 프로세스 작동 순서를 바꿀 수 있고 시간할당량을 조절하여 작업 효율을 높일 수 있습니다. 예를 들어, 전면 프로세스는 반응 속도를 높이기 위해 타임 슬라이스를 작게 하고, 후면 프로세스는 사용자와 상호작용이 없으면 FCFS 방식으로 처리 할 수 있습니다.
+
+다단계 큐 스케줄링은 우선순위가 높은 상위 큐 프로세스의 작업이 끝나기 전까지 하위 큐 프로세스의 작업을 할 수 없습니다. 쉽게 말해, 우선순위 1번인 큐에 프로세스가 대기하고 있다면 우선순위 2번인 큐의 프로세스는 1번 큐의 프로세스가 작업을 마칠 때까지 기다려야합니다.
+
+<br><br>
+
+### 📄다단계 피드백 큐 스케줄링
+다단계 피드백 큐(MultiLevel Feedback Queue) 스케줄링은 입출력 중심인 프로세스와 연산 중심인 프로세스의 특성에 따라 서로 다른 시간 할당량을 부여하는 선점 방식의 스케줄링 알고리즘입니다. 또한 우선순위가 낮은 프로세스에 불리한 다단계 큐 스케줄링의 단점을 보완한 방식입니다. 다단계 큐 스케줄링은 각 단계의 큐에 라운드 로빈 방식을 사용하고 우선순위에 변화가 없는데, 다단계 피드백 큐 스케줄링은 CPU를 사용하고 난 프로세스의 우선순위가 낮아집니다. 시간 할당량 안에 작업을 끝마치지 못한 프로세스는 원래 큐로 돌아가지 않고 우선순위가 하나 낮은 큐의 끝으로 들어갑니다.
+
+프로세스가 CPU를 할당받아 실행될 때마다 프로세스의 우선순위를 낮춤으로써 우선순위가 낮은 프로세스의 실행이 연기되는 문제를 완화했습니다. 그리고 다단계 피드백 큐 스케줄링에서 우선순위에 따라 시간 할당량의 크기가 다르다는 특징이 있습니다. 프로세스의 우선순위가 낮아질수록 해당 큐의 시간 할당량은 커집니다. 우선순위가 낮은 프로세스가 우선순위가 높은 프로세스보다 CPU를 얻을 확률이 더 낮기 때문에 CPU를 할당받으면 작업을 더 오래할 수 있도록 우선순위가 낮은 큐의 시간 할당량을 크게 설정한 것입니다.
+
+다단계 피드백 큐 스케줄링의 마지막 큐에 있는 프로세스는 무한대의 시간 할당량을 얻습니다. 따라서 마지막 큐의 프로세스가 실행상태에 들어가면 CPU를 뺏기지 않고 끝까지 작업을 마칠 수 있습니다. 들어온 순서대로 작업을 마치기 때문에 마지막 큐는 FCFS 스케줄링 방식으로 동작합니다.
+
+![MLFQ](/assets/images/OS/MLFQ.png){: width="300" height="300"}
+<br>
+출처
+<br>
+[https://www.geeksforgeeks.org/multilevel-feedback-queue-scheduling-mlfq-cpu-scheduling/](https://www.geeksforgeeks.org/multilevel-feedback-queue-scheduling-mlfq-cpu-scheduling/)
 
 <br><br>
