--- a/_posts/C/2023-04-18-C-12.md
+++ b/_posts/C/2023-04-18-C-12.md
@@ -113,3 +113,52 @@ struct student
     int number;
 } a = {"홍길동", 20, 1};
 ```
+
+<br><br><br>
+
+## 📚구조체 멤버 참조
+구조체 변수를 사용하기 위해 구조체 변수 안에 존재하는 구조체 멤버에 접근할 수 있어야 합니다. 구조체 멤버에 값을 대입하거나 꺼내려면 멤버 연산자인 점(.)연산자를 사용합니다.
+
+```c
+#include <stdio.h>
+
+struct student
+{
+    char Name[8];
+    int Age;
+    int Number;
+};
+
+void main()
+{
+    struct student a = { "홍길동", 30, 1 };
+
+    printf("학생 a의 정보: %s, %d, %d \n", a.Name, a.Age, a.Number);
+}
+```
+
+<br><br><br>
+
+## 📚구조체 배열
+동일한 구조를 갖는 구조체 변수가 여러 개 사용될 때 구조체 변수를 대표하는 배열 이름을 설정하여 일반 배열 처럼 사용하는 것입니다.
+
+```c
+#include <stdio.h>
+
+void main()
+{
+    struct student
+    {
+        char *Name;
+        int Age;
+        int Number;
+    };
+
+    struct student students[3] = { {"홍길동", 30, 1}, {"황진이", 30, 2}, {"임꺽정", 29, 3} };
+
+    for (int i = 0; i < 3; ++i)
+    {
+        printf("이름: %s 나이: %d 번호: %d \n", students[i].Name, students[i].Age, students[i].Number);
+    }
+}
+```
