--- a/_posts/C/2023-04-18-C-12.md
+++ b/_posts/C/2023-04-18-C-12.md
@@ -19,9 +19,9 @@ date: 2023-04-18
 ```c
 struct student
 {
-    char name[4];
-    int age;
-    int number;
+    char Name[4];
+    int Age;
+    int Number;
 };
 ```
 
@@ -33,9 +33,9 @@ struct student
 ```c
 struct student
 {
-    char name[4];       // 구조체 멤버
-    int age;            // 구조체 멤버
-    int number;         // 구조체 멤버
+    char Name[4];       // 구조체 멤버
+    int Age;            // 구조체 멤버
+    int Number;         // 구조체 멤버
 };
 ```
 
@@ -56,9 +56,9 @@ struct student a, b;    // 구조체 변수 a, b 선언
 ```c
 struct student
 {
-    char name[4];
-    int age;
-    int number;
+    char Name[4];
+    int Age;
+    int Number;
 } a, b;
 
 // 같은 형의 구조체 변수 사이에 배정 연산자를 사용할 수 있습니다.
@@ -68,18 +68,18 @@ b = a;
 // 구조체 이름이 없기 때문에 동일 형의 변수는 선언할 수 없습니다.
 struct
 {
-    char name[4];
-    int age;
-    int number;
+    char Name[4];
+    int Age;
+    int Number;
 } a1;
 
 // 위와 아래의 구조체 모양은 같지만 컴파일러는 두 형을 다르게 취급하기 때문에 아래와 같은 배정은 불가능합니다.
 
 struct
 {
-    char name[4];
-    int age;
-    int number;
+    char Name[8];
+    int Age;
+    int Number;
 } b1;
 
 a1 = b1;    // 불가능
@@ -98,9 +98,9 @@ a1 = b1;    // 불가능
 // 1
 struct student
 {
-    char name[4];
-    int age;
-    int number;
+    char Name[8];
+    int Age;
+    int Number;
 };
 
 struct student a = {"홍길동", 20, 1};
@@ -108,16 +108,16 @@ struct student a = {"홍길동", 20, 1};
 // 2
 struct student
 {
-    char name[4];
-    int age;
-    int number;
+    char Name[8];
+    int Age;
+    int Number;
 } a = {"홍길동", 20, 1};
 ```
 
 <br><br><br>
 
 ## 📚구조체 멤버 참조
-구조체 변수를 사용하기 위해 구조체 변수 안에 존재하는 구조체 멤버에 접근할 수 있어야 합니다. 구조체 멤버에 값을 대입하거나 꺼내려면 멤버 연산자인 점(.)연산자를 사용합니다.
+구조체 변수를 사용하기 위해 구조체 변수 안에 존재하는 구조체 멤버에 접근할 수 있어야 합니다. 구조체 멤버에 값을 대입하거나 꺼내려면 멤버 연산자인 도트(.)연산자를 사용합니다.
 
 ```c
 #include <stdio.h>
@@ -162,3 +162,184 @@ void main()
     }
 }
 ```
+
+<br><br><br>
+
+## 📚구조체 포인터
+###  📄구조체 포인터 선언
+구조체 포인터는 구조체 변수 선언할 때 *를 변수 앞에 붙여서 포인터로 선언합니다. 구조체 포인터는 주소값을 갖게 되며 자료가 있는 곳을 가리킵니다.
+
+```c
+struct student
+{
+    char Name[8];
+    int Age;
+    int Number;
+}
+
+struct student a;
+struct student *p;      // 구조체 포인터 p선언
+
+p = &a;                 // 포인터 변수 초기화
+```
+
+<br><br>
+
+###  📄구조체 포인터 멤버 참조
+* 도트 연산자(.) 사용
+<br>
+(*p).Name
+<br>
+*보다 .연산의 우선순위가 높기 때문에 도트 연산자를 사용할 경우 괄호를 사용해야 합니다.
+
+
+* 포인터 연산자(->) 사용
+<br>
+p->Name
+
+```c
+#include <stdio.h>
+
+struct student
+{
+    char* Name;
+    int Age;
+    int Number;
+};
+
+void main()
+{
+    struct student students[3] = 
+    { 
+        {"홍길동", 30, 1}, 
+        {"황진이", 30, 2}, 
+        {"임꺽정", 29, 3} 
+    };
+    struct student* p;
+
+    p = students;
+
+    printf("%s %d %d \n", p->Name, p->Age, p->Number);
+
+    p += 2;
+    printf("%s %d %d \n", p->Name, p->Age, p->Number);
+
+    --p;
+    printf("%s %d %d \n", p->Name, p->Age, p->Number);
+}
+```
+
+<br><br><br>
+
+## 📚함수와 구조체
+### 📄구조체를 함수의 매개변수로 사용
+구조체를 함수의 매개변수로 사용하는 방법은 일반 변수를 함수의 매개변수로 사용하는 것과 같습니다. 구조체를 값에 의한 자료전달로 매개변수를 사용하면 구조체 내용 전체가 복사되기 때문에 시간이 많이 걸리고 기억공간의 낭비가 심하다는 단점이 있습니다.
+
+```c
+#include <stdio.h>
+
+struct num
+{
+    int X;
+    int Y;
+    int Sum;
+};
+
+struct num Sum(struct num number2)
+{
+    number2.Sum = number2.X + number2.Y;
+
+    return(number2);
+}
+
+void main()
+{
+    struct num number1;
+    number1.X = 1;
+    number1.Y = 2;
+
+    number1 = Sum(number1);
+
+    printf("x:%d, y:%d, sum:%d \n", number1.X, number1.Y, number1.Sum);
+}
+```
+
+<br><br>
+
+### 📄구조체 포인터를 함수의 매개변수로 사용
+구조체 포인터를 함수 매개변수로 사용하면 구조체를 복사하지 않아도 되기 때문에 프로그램 실행 속도를 향상시킬 수 있고 기억공간의 사용 효율도 올라가는 장점이 있습니다.
+
+```c
+#include <stdio.h>
+
+struct num
+{
+    int X;
+    int Y;
+    int Sum;
+};
+
+struct num Sum(struct num *number2)             // 구조체 포인터 매개변수
+{
+    number2->Sum = number2->X + number2->Y;     // 포인터 연산자 사용
+}
+
+void main()
+{
+    struct num number1;
+    number1.X = 1;
+    number1.Y = 2;
+
+    Sum(&number1);                              // 참조 호출
+
+    printf("x:%d, y:%d, sum:%d \n", number1.X, number1.Y, number1.Sum);
+}
+```
+
+<br><br><br>
+
+## 📚typedef
+typedef는 이미 존재하는 자료형에 새로운 이름을 붙일 때 사용하는 키워드입니다. 기존 자료형의 이름을 바꾸거나 구조체형을 선언하는데 많이 사용됩니다.
+
+```c
+typedef unsigned int BYTE;
+BYTE val;                   // unsigned int형을 BYTE라는 새로운 이름으로 정의
+
+typedef int* PTR;
+PTR p1, p2;                 // PTR p1, p2는 int* p1, p2를 의미
+```
+
+<br>
+
+사용 예
+```c
+#include <stdio.h>
+
+struct num
+{
+    int X;
+    int Y;
+};
+
+typedef struct num NUMBER;
+
+void main()
+{
+    NUMBER n = { 0, 1 };
+
+    printf("n.X = %d, n.Y = %d \n", n.X, n.Y);
+}
+```
+
+<br>
+
+아래와 같이 한번에 사용할 수도 있습니다.
+```c
+typedef struct num
+{
+    int X;
+    int Y;
+} NUMBER;
+```
+
+<br><br>
